Update supervisor child ops